fixed whitespaces in mobile mode

--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,7 @@ footer {
         display: flex;
         flex-wrap: wrap;
         background-color: black;
+        z-index: 1;
     }
     .smallnav{
         border-bottom-color: rgb(21, 54, 5);
@@ -405,6 +406,8 @@ footer {
         margin-left: auto;
         margin-right: auto;
         padding-top:200px;
+        margin-top:-200px;
+        text-align: justify;
     }
     /* #section1{
         padding-top: 200px;
@@ -415,22 +418,20 @@ footer {
         margin-right: auto;
         margin-bottom: 20px
     }
-    .section {
+    /* .section {
         padding-top: 0;
-    }
+    } */
     .curriculumDivider {
         width: 100%;
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
+        padding-bottom: 20px;
     }
     
     .curriculumFlex {
         width: 100%;
         margin: 10px;
     }
-    .curriculumFlex50 {
-        width: 50%;
-        margin: 10px;
-    }
+
   }
